--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="_2_0"><strike>$ 2.0</strike></string>
 </resources>
